--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,19 @@
-form{
+/*form{
   background: #fff;
   padding: 4em 4em 2em;
   max-width: 600px;
   margin: 50px auto 0;
   box-shadow: 0 0 0.1em #222;
   border-radius: 2px;
-}
+}*/
+
+   .wrapper{
+            width: 650px;
+            margin: 0 auto;
+        }
+        .page-header h2{
+            margin-top: 0;
+        }
+        table tr td:last-child a{
+            margin-right: 15px;
+        }
